juniper-from-schema/tests/compile_fail/snake_cased_fields_on_interfaces.stderr
error: proc macro panicked
  --> $DIR/snake_cased_fields_on_interfaces.rs:4:1
   |
4  | / juniper_from_schema::graphql_schema! {
5  | |     type Query {
6  | |         field: SomeInterface!
7  | |     }
...  |
13 | |     }
14 | | }
   | |_^
   |
   = help: message: 
           
           error: Field names must be camelCase, not snake_case
            --> schema:2:17
             |
           2 |    SomeInterface { snake_cased : String ! }
             |                    ^
           
           This is because Juniper always converts all field names to camelCase
           
           
           aborting due to previous error
